--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,25 @@ body {
     width: 260px;
     height: 50px;
 }
+footer{
+    background-color: #68a097;
+}
+.social-icons{
+    text-align: center;
+    padding: 41px 0 49px 0;
+}
+.social-icons__facebook, .social-icons__twitter, .social-icons__googlePlus, .social-icons__linkedIn{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-color: #82c8bd;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 20px;
+}
+.social-icons__fa {
+    font-size: 26px;
+    color: #ffffff;
+    line-height: 60px;
+}
